--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ableton-push",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "Interface with the Ableton Push in Meshblu!",
   "main": "index.js",
   "scripts": {
@@ -37,6 +37,7 @@
     "lodash": "^4.17.2",
     "midi": "^0.9.5",
     "push-wrapper": "^1.1.0",
+    "tinycolor2": "^1.4.1",
     "web-midi-api": "^1.4.4"
   }
 }
